testdata/baselines/reference/submodule/conformance/jsdocAugments_errorInExtendsExpression.errors.txt
/a.js(3,17): error TS2304: Cannot find name 'err'.
/a.js(3,17): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (2 errors) ====
    class A {}
    /** @augments A */
    class B extends err() {}
                    ~~~
!!! error TS2304: Cannot find name 'err'.
                    ~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    